fixed spacing issues

--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -17,14 +17,19 @@ h1.firstheading {
 	width: 100%;
 }
 
-.row > div {
+.row > div > .item {
 	background-color: #999;
 	border: 1px solid #000;
-	padding: 25px 20px 20px;
 	position: relative;
+	padding: 40px 20px 20px;
+	margin: 10px;
 }
 
-.row > div > h4 {
+.row > div > .item > p {
+	margin: 0;
+}
+
+.row h4 {
 	margin: 0;
 	outline: 1px solid #000;
 	padding: 5px 0;
@@ -64,30 +69,21 @@ h1.firstheading {
 
 @media only screen and (min-width: 768px) and (max-width: 991px ) {
 
-	.col-md-6:nth-child(1) {
-		margin-right: 10px;
-	}
-
 	.col-md-6 {
 		float: left;
-		width: calc(50% - 5px);
+		width: calc(50%);
 	}
 	.col-md-12 {
 		float: left;
-		margin-top: 10px;
 		width: 100%;
 	}
 }
 
 @media only screen and (min-width: 992px) {
 
-	.col-lg-4:nth-child(1),
-	.col-lg-4:nth-child(2) {
-		margin-right: 12px;
-	}
-
 	.col-lg-4 {
 		float: left;
-		width: calc(33.33% - 8px);
+		width: calc(33.33%);
 	}
+
 }
